<?xml version="1.0"?>
<package format="2">
  <name>hello_world</name>
  <version>0.0.0</version>
  <description>The hello_world package</description>


  <maintainer email="lin@todo.todo">lin</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <export></export>


</package>
